--- a/social-media-frontend/src/components/UserProfile/userProfile.css
+++ b/social-media-frontend/src/components/UserProfile/userProfile.css
@@ -6,9 +6,17 @@
 
 .profile_card {
     margin-left: 10em;
-    background-image: linear-gradient(purple, darkblue);
+    box-shadow: 2px 5px 10px black;
 }
 
-.m-2 {
-    color: white;
+.bio {
+    height: 60%;
+    box-shadow: 2px 5px 10px black;
+}
+
+.spotify {
+    padding: 3em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
