--- a/social-media-frontend/src/components/mainPage/mainPage.css
+++ b/social-media-frontend/src/components/mainPage/mainPage.css
@@ -1,7 +1,7 @@
 .main {
     display: flex;
     flex-direction: row;
-    margin-top: 2em;
+    margin-top: 4em;
 }
 
 .main-card {
@@ -15,6 +15,10 @@
 
 .m-2 {
     color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 
 .drop-downs {
@@ -23,4 +27,16 @@
     align-items: center;
     flex-direction: column;
     margin-top: 2em;
+}
+
+.new_post {
+    margin-left: 10em;
+    margin-top: 1em;
+}
+
+footer {
+    position:absolute;
+    left:0;
+    bottom:0;
+    right:0;
 }
