--- a/social-media-frontend/src/components/mainPage/mainPage.css
+++ b/social-media-frontend/src/components/mainPage/mainPage.css
@@ -7,6 +7,7 @@
 
 .main-card {
     background-image: linear-gradient(purple, darkblue);
+    height: 100%;
 }
 
 .card-info {
@@ -30,7 +31,7 @@
 }
 
 .new_post {
-    margin-top: 5em;
+    margin-top: 10em;
     padding: 1em;
 }
 
@@ -43,6 +44,11 @@ footer {
 
 .header {
     background-color: darkblue !important;
+    color: white;
+}
+
+.post_button {
+    background-color: purple !important;
     color: white;
 }
 
