displays users name on profile page.

--- a/social-media-frontend/src/components/mainPage/mainPage.css
+++ b/social-media-frontend/src/components/mainPage/mainPage.css
@@ -5,6 +5,10 @@
     margin-left: .5em;
 }
 
+.user-name{
+    color: white
+}
+
 .main-card {
     background-image: linear-gradient(purple, darkblue);
     height: 50em;
